# es-dash

./: .gitignore
es-dash-backend/: es-dash-backend.cabal  stack.yaml
es-dash-backend/src/: EventStoreSettings.hs  Main.hs  ReadService.hs  User.hs  WriteService.hs
es-dash-frontend/: Main.elm  elm-package.json
es-dash-read-service/: es-dash-read-service.cabal
es-dash-read-service/src/: Main.hs
es-dash-write-service/: es-dash-write-service.cabal
es-dash-write-service/src/: Main.hs
