name:                es-dash-backend
version:             0.1.0.0
license:             MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable es-dash-backend
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, eventstore >= 0.15, websockets > 0.9.8.0, text >=1.2, aeson >= 1.0, uuid >= 1.3, async

